[gd_scene load_steps=2 format=3 uid="uid://dshupw7pj77l8"]

[ext_resource type="Script" uid="uid://d36p7kmvovweu" path="res://scripts/Menu.gd" id="1_xdvgc"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_xdvgc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 549.0
offset_top = 351.0
offset_right = 788.0
offset_bottom = 452.0

[node name="ButtonPlay" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="ButtonSettings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ButtonQuit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="SettingsMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HSliderSensitivity" type="HSlider" parent="SettingsMenu"]
layout_mode = 0
offset_left = 772.0
offset_top = 363.0
offset_right = 965.0
offset_bottom = 379.0
min_value = 0.001
max_value = 0.01
step = 0.001
value = 0.002

[node name="LabelSensitivity" type="Label" parent="SettingsMenu"]
layout_mode = 0
offset_left = 348.0
offset_top = 357.0
offset_right = 483.0
offset_bottom = 380.0
text = "Mouse Sensitivity"

[node name="ButtonBackToMenu" type="Button" parent="SettingsMenu"]
layout_mode = 0
offset_left = 647.0
offset_top = 431.0
offset_right = 692.0
offset_bottom = 462.0
text = "Back"
